upload all files

--- a/products/protective/anti-tarnish-bu-186.html
+++ b/products/protective/anti-tarnish-bu-186.html
@@ -202,7 +202,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/products/protective/anti-tarnish/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/protective/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">Anti-Tarnish BU-816 (Boil Type): น้ำยากันหมองแบบต้ม</h1>
       <p data-i18n-key="hero_tagline">ชำระคราบหมองด้วยความร้อน สร้างฟิล์มใส ไล่น้ำ แห้งเร็ว ใช้งาน 50–120 cc/L, 50–80 °C (ดีที่สุด &gt;75 °C), pH 6–7, 10 วินาที–2 นาที</p>
