--- a/products/protective/antitarnish-for-copper.html
+++ b/products/protective/antitarnish-for-copper.html
@@ -229,12 +229,10 @@
       <nav id="toc" class="reveal" aria-label="สารบัญ">
         <h2 class="section" data-i18n-key="toc_title">สารบัญ</h2>
         <p>
-          <a class="toc-chip" href="#features" data-i18n-key="toc_features">จุดเด่น</a>
           <a class="toc-chip" href="#usage" data-i18n-key="toc_usage">สัดส่วนการใช้งาน</a>
           <a class="toc-chip" href="#makeup" data-i18n-key="toc_makeup">ตัวอย่างการผสม</a>
           <a class="toc-chip" href="#equipment" data-i18n-key="toc_equipment">ภาชนะ & อุปกรณ์</a>
           <a class="toc-chip" href="#process" data-i18n-key="toc_process">ขั้นตอนการทำงาน</a>
-          <a class="toc-chip" href="#tips" data-i18n-key="toc_tips">ข้อเสนอแนะ</a>
           <a class="toc-chip" href="#performance" data-i18n-key="toc_perf">ประสิทธิภาพการทดสอบ</a>
         </p>
       </nav>
@@ -346,31 +344,32 @@
         </div>
       </section>
 
-      <!-- Equipment -->
-      <section id="equipment" class="reveal section-block" aria-labelledby="equip-h">
-        <h2 id="equip-h" class="section" data-i18n-key="equip_h">ภาชนะ & อุปกรณ์</h2>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="equip_1"><strong>ตัวถัง:</strong> สแตนเลส, โพลีเอทิลีน (PE), โพลิโพรพิลีน (PP)</li>
-            <li data-i18n-key="equip_2"><strong>ฮีตเตอร์ (ถ้าต้องการอุ่น):</strong> แก้ว, เทฟลอน (PTFE), สแตนเลส, เซรามิก หรือแกรไฟต์</li>
-            <li data-i18n-key="equip_3"><strong>การทำให้แห้ง:</strong> เป่าลม/อบอุ่นหลังจุ่ม เพื่อผลไล่น้ำที่ดี</li>
-          </ul>
-        </div>
-      </section>
+<!-- Equipment -->
+<section id="equipment" class="reveal section-block" aria-labelledby="equip-h">
+  <h2 id="equip-h" class="section" data-i18n-key="equip_h">ภาชนะ & อุปกรณ์</h2>
+  <div class="content">
+    <ul>
+      <li data-i18n-key="equip_1"><strong>ตัวถัง:</strong> ควรใช้ถังที่ทนทานต่อสารเคมีและไม่ทำปฏิกิริยากับสารละลาย เช่น สแตนเลส, โพลีเอทิลีน (PE), หรือโพลิโพรพิลีน (PP) และควรมีฝาครอบหรือระบบดูดไอเพื่อความปลอดภัยและลดการแพร่กระจายของไอสารเคมี</li>
+      <li data-i18n-key="equip_2"><strong>ฮีตเตอร์ (ถ้าต้องการอุ่น):</strong> หากต้องการอุ่นสารละลายเพื่อเพิ่มประสิทธิภาพ ควรเลือกฮีตเตอร์ที่ทำจากวัสดุที่ไม่ทำปฏิกิริยากับสารเคมี เช่น แก้ว, เทฟลอน (PTFE), สแตนเลส, เซรามิก หรือแกรไฟต์</li>
+      <li data-i18n-key="equip_3"><strong>การทำให้แห้ง:</strong> ใช้การเป่าลมหรือการอบอุ่นเพื่อช่วยให้ชิ้นงานแห้งสนิทหลังการจุ่ม ลดคราบน้ำและทำให้ผลของการกันหมองมีประสิทธิภาพสูงสุด</li>
+    </ul>
+  </div>
+</section>
 
-      <!-- Process -->
-      <section id="process" class="reveal section-block" aria-labelledby="process-h">
-        <h2 id="process-h" class="section" data-i18n-key="process_h">ขั้นตอนการทำงาน</h2>
-        <div class="content">
-          <ol>
-            <li data-i18n-key="proc_1">เตรียมผิว: ชุบทองแดง/ทองเหลืองเสร็จ หรือทำความสะอาด/กัดเงาเรียบร้อย</li>
-            <li data-i18n-key="proc_2">ล้างน้ำสะอาด</li>
-            <li data-i18n-key="proc_3">จุ่มน้ำกลั่น</li>
-            <li data-i18n-key="proc_4">จุ่ม <strong>Anti-tarnish for Copper</strong> 5–15 วินาที</li>
-            <li data-i18n-key="proc_5">เป่าหรืออบให้แห้ง</li>
-          </ol>
-        </div>
-      </section>
+<!-- Process -->
+<section id="process" class="reveal section-block" aria-labelledby="process-h">
+  <h2 id="process-h" class="section" data-i18n-key="process_h">ขั้นตอนการทำงาน</h2>
+  <div class="content">
+    <p data-i18n-key="proc_overview">กระบวนการนี้เป็นการใช้สารเคมีประเภท Anti-tarnish เพื่อเคลือบผิวทองเหลืองบาง ๆ ช่วยป้องกันการทำปฏิกิริยากับออกซิเจนและสารประกอบอื่น ๆ ในอากาศ ซึ่งเป็นสาเหตุหลักของการเกิดคราบหมองหรือคราบดำ</p>
+    <ol>
+      <li data-i18n-key="proc_1">เตรียมผิว: ชิ้นงานต้องได้รับการเตรียมผิวให้พร้อมก่อนเข้าสู่กระบวนการกันหมอง ไม่ว่าจะเป็นการชุบทองแดง/ทองเหลืองเสร็จใหม่ ๆ หรือผ่านการทำความสะอาดและกัดเงามาอย่างเรียบร้อย ผิวที่สะอาดและเงาจะช่วยให้สารกันหมองเคลือบได้อย่างสมบูรณ์</li>
+      <li data-i18n-key="proc_2">ล้างน้ำสะอาด: ล้างชิ้นงานด้วยน้ำสะอาดเพื่อกำจัดคราบสารเคมีจากการชุบหรือกัดเงาที่อาจหลงเหลืออยู่</li>
+      <li data-i18n-key="proc_3">จุ่มน้ำกลั่น: จุ่มน้ำกลั่น (Deionized Water) เพื่อลดการเกิดคราบน้ำและแร่ธาตุบนผิวชิ้นงาน ทำให้ผิวสะอาดที่สุดก่อนเข้าสู่ขั้นตอนถัดไป</li>
+      <li data-i18n-key="proc_4">จุ่ม Anti-tarnish: จุ่มชิ้นงานลงในสารละลาย Anti-tarnish for Copper เป็นเวลา 5–15 วินาที โดยไม่ต้องใช้ความร้อนหรือกระแสไฟฟ้า</li>
+      <li data-i18n-key="proc_5">ทำให้แห้ง: นำชิ้นงานขึ้นมาและทำให้แห้งทันทีด้วยการเป่าลมหรืออบ เพื่อให้สารเคลือบแห้งอย่างรวดเร็วและทั่วถึง</li>
+    </ol>
+  </div>
+</section>
 
       <!-- Tips -->
       <section id="tips" class="reveal section-block" aria-labelledby="tips-h">
@@ -380,13 +379,56 @@
         </div>
       </section>
 
-      <!-- Performance -->
-      <section id="performance" class="reveal section-block" aria-labelledby="perf-h">
-        <h2 id="perf-h" class="section" data-i18n-key="perf_h">ประสิทธิภาพการทดสอบ</h2>
-        <div class="content">
-          <p data-i18n-key="perf_p1">ฟิล์มที่เกิดขึ้นมีความทนต่อการขีดข่วน และสามารถทน <strong>Humidity Test ~200 ชั่วโมง</strong> (ค่าทั่วไปขึ้นกับสภาพหน้างานและการเตรียมผิว)</p>
-        </div>
-      </section>
+<!-- Performance / Common Issues -->
+<section id="performance" class="reveal section-block" aria-labelledby="perf-h">
+  <h2 id="perf-h" class="section" data-i18n-key="perf_h">ปัญหาที่พบบ่อยในการใช้สารกันหมองจุ่มเย็นบนทองเหลือง</h2>
+  <div class="content">
+    <p class="lead" data-i18n-key="perf_lead">นี่คือปัญหาที่พบบ่อยในการใช้สารกันหมองจุ่มเย็นบนทองเหลือง พร้อมแนวทางแก้ไข</p>
+
+    <ol class="issues">
+      <li>
+        <h3 data-i18n-key="perf_i1_t">1. เกิดคราบหรือจุดด่างบนชิ้นงาน</h3>
+        <p data-i18n-key="perf_i1_cause_h"><strong>สาเหตุ:</strong> การเตรียมผิวไม่สะอาด หรือมีคราบน้ำหลงเหลืออยู่ โดยเฉพาะถ้าใช้น้ำประปาที่มีแร่ธาตุผสมอยู่</p>
+        <p data-i18n-key="perf_i1_fix_h"><strong>แนวทางแก้ไข:</strong> ตรวจสอบขั้นตอนการล้างน้ำให้สะอาด โดยเฉพาะขั้นตอน จุ่มน้ำกลั่น (Deionized Water) ก่อนจุ่มสารกันหมอง จะช่วยป้องกันการเกิดคราบจากแร่ธาตุในน้ำได้</p>
+      </li>
+
+      <li>
+        <h3 data-i18n-key="perf_i2_t">2. ประสิทธิภาพในการกันหมองต่ำ</h3>
+        <p data-i18n-key="perf_i2_c1"><strong>สาเหตุ:</strong></p>
+        <ul>
+          <li data-i18n-key="perf_i2_cause_1">จุ่มไม่นานพอ: การจุ่มในสารละลายสั้นเกินไป ทำให้สารเคลือบไม่ทั่วถึง</li>
+          <li data-i18n-key="perf_i2_cause_2">การทำให้แห้งไม่ดี: หากชิ้นงานไม่แห้งสนิทหลังจุ่ม จะทำให้เกิดคราบและประสิทธิภาพลดลง</li>
+        </ul>
+        <p data-i18n-key="perf_i2_fix_h"><strong>แนวทางแก้ไข:</strong></p>
+        <ul>
+          <li data-i18n-key="perf_i2_fix_1">เพิ่มเวลาจุ่มให้อยู่ในกรอบที่แนะนำ (5–15 วินาที) หรือตามคำแนะนำของผู้ผลิต</li>
+          <li data-i18n-key="perf_i2_fix_2">ใช้ การเป่าลม หรือ การอบอุ่น ให้ชิ้นงานแห้งสนิททันทีหลังการจุ่ม</li>
+        </ul>
+      </li>
+
+      <li>
+        <h3 data-i18n-key="perf_i3_t">3. ชิ้นงานมีสีเปลี่ยนไปหรือสีเพี้ยน</h3>
+        <p data-i18n-key="perf_i3_cause_h"><strong>สาเหตุ:</strong> สารกันหมองอาจทำปฏิกิริยากับผิวทองเหลืองที่เตรียมไว้ไม่ดีพอ หรือสารกันหมองมีความเข้มข้นสูงเกินไป</p>
+        <p data-i18n-key="perf_i3_fix_h"><strong>แนวทางแก้ไข:</strong></p>
+        <ul>
+          <li data-i18n-key="perf_i3_fix_1">ควรใช้สารกันหมองที่มีความเข้มข้นตามคำแนะนำของผู้ผลิตอย่างเคร่งครัด</li>
+          <li data-i18n-key="perf_i3_fix_2">ตรวจสอบให้แน่ใจว่าผิวชิ้นงานสะอาดและเงาดีแล้วก่อนเข้าสู่กระบวนการ</li>
+        </ul>
+      </li>
+
+      <li>
+        <h3 data-i18n-key="perf_i4_t">4. สารละลายเสื่อมสภาพเร็ว</h3>
+        <p data-i18n-key="perf_i4_cause_h"><strong>สาเหตุ:</strong> มีสิ่งสกปรก, คราบโลหะ, หรือสารเคมีจากขั้นตอนก่อนหน้าปนเปื้อนเข้ามาในบ่อสารกันหมอง</p>
+        <p data-i18n-key="perf_i4_fix_h"><strong>แนวทางแก้ไข:</strong></p>
+        <ul>
+          <li data-i18n-key="perf_i4_fix_1">ตรวจสอบความสะอาดของชิ้นงานและระบบล้างน้ำให้ดีก่อนจุ่ม</li>
+          <li data-i18n-key="perf_i4_fix_2">ไม่ควรนำชิ้นงานที่ยังไม่สะอาดมาจุ่มในบ่อ</li>
+          <li data-i18n-key="perf_i4_fix_3">หากสารละลายเริ่มสกปรก ควรเปลี่ยนใหม่</li>
+        </ul>
+      </li>
+    </ol>
+  </div>
+</section>
 
     </article>
   </main>
@@ -487,23 +529,52 @@
         mk_item_1:"Anti-tarnish for Copper (คอนเซนเทรต)", mk_item_1_qty:"20 ซีซี", mk_item_1_note:"ตวงให้แม่นยำ",
         mk_item_2:"น้ำกลั่น/DI", mk_item_2_qty:"เติมจนครบ 1 ลิตร", mk_item_2_note:"กวนให้เข้ากันจนใสสม่ำเสมอ",
 
-        equip_h:"ภาชนะ & อุปกรณ์",
-        equip_1:"ตัวถัง: สแตนเลส, โพลีเอทิลีน (PE), โพลิโพรพิลีน (PP)",
-        equip_2:"ฮีตเตอร์ (ถ้าต้องการอุ่น): แก้ว, เทฟลอน (PTFE), สแตนเลส, เซรามิก หรือแกรไฟต์",
-        equip_3:"การทำให้แห้ง: เป่าลม/อบอุ่นหลังจุ่ม เพื่อผลไล่น้ำที่ดี",
+    equip_h: "ภาชนะ & อุปกรณ์",
+    equip_1: "ตัวถัง: ควรใช้ถังที่ทนทานต่อสารเคมีและไม่ทำปฏิกิริยากับสารละลาย เช่น สแตนเลส, โพลีเอทิลีน (PE), หรือโพลิโพรพิลีน (PP) และควรมีฝาครอบหรือระบบดูดไอเพื่อความปลอดภัยและลดการแพร่กระจายของไอสารเคมี",
+    equip_2: "ฮีตเตอร์ (ถ้าต้องการอุ่น): หากต้องการอุ่นสารละลายเพื่อเพิ่มประสิทธิภาพ ควรเลือกฮีตเตอร์ที่ทำจากวัสดุที่ไม่ทำปฏิกิริยากับสารเคมี เช่น แก้ว, เทฟลอน (PTFE), สแตนเลส, เซรามิก หรือแกรไฟต์",
+    equip_3: "การทำให้แห้ง: ใช้การเป่าลมหรือการอบอุ่นเพื่อช่วยให้ชิ้นงานแห้งสนิทหลังการจุ่ม ลดคราบน้ำและทำให้ผลของการกันหมองมีประสิทธิภาพสูงสุด",
 
-        process_h:"ขั้นตอนการทำงาน",
-        proc_1:"เตรียมผิว: ชุบทองแดง/ทองเหลืองเสร็จ หรือทำความสะอาด/กัดเงาเรียบร้อย",
-        proc_2:"ล้างน้ำสะอาด",
-        proc_3:"จุ่มน้ำกลั่น",
-        proc_4:"จุ่ม Anti-tarnish for Copper 5–15 วินาที",
-        proc_5:"เป่าหรืออบให้แห้ง",
+    process_h: "ขั้นตอนการทำงาน",
+    proc_overview: "กระบวนการนี้เป็นการใช้สารเคมีประเภท Anti-tarnish เพื่อเคลือบผิวทองเหลืองบาง ๆ ช่วยป้องกันการทำปฏิกิริยากับออกซิเจนและสารประกอบอื่น ๆ ในอากาศ ซึ่งเป็นสาเหตุหลักของการเกิดคราบหมองหรือคราบดำ",
+    proc_1: "เตรียมผิว: ชิ้นงานต้องได้รับการเตรียมผิวให้พร้อมก่อนเข้าสู่กระบวนการกันหมอง ไม่ว่าจะเป็นการชุบทองแดง/ทองเหลืองเสร็จใหม่ ๆ หรือผ่านการทำความสะอาดและกัดเงามาอย่างเรียบร้อย ผิวที่สะอาดและเงาจะช่วยให้สารกันหมองเคลือบได้อย่างสมบูรณ์",
+    proc_2: "ล้างน้ำสะอาด: ล้างชิ้นงานด้วยน้ำสะอาดเพื่อกำจัดคราบสารเคมีจากการชุบหรือกัดเงาที่อาจหลงเหลืออยู่",
+    proc_3: "จุ่มน้ำกลั่น: จุ่มน้ำกลั่น (Deionized Water) เพื่อลดการเกิดคราบน้ำและแร่ธาตุบนผิวชิ้นงาน ทำให้ผิวสะอาดที่สุดก่อนเข้าสู่ขั้นตอนถัดไป",
+    proc_4: "จุ่ม Anti-tarnish: จุ่มชิ้นงานลงในสารละลาย Anti-tarnish for Copper เป็นเวลา 5–15 วินาที โดยไม่ต้องใช้ความร้อนหรือกระแสไฟฟ้า",
+    proc_5: "ทำให้แห้ง: นำชิ้นงานขึ้นมาและทำให้แห้งทันทีด้วยการเป่าลมหรืออบ เพื่อให้สารเคลือบแห้งอย่างรวดเร็วและทั่วถึง",
 
         tips_h:"ข้อเสนอแนะ",
         tips_p1:"สำคัญ: ก่อนจุ่มน้ำยากันหมอง ต้องล้างความเป็นกรดออกจากผิวให้หมด หากกรดยังค้างอยู่ จะลดประสิทธิภาพของน้ำยา",
 
         perf_h:"ประสิทธิภาพการทดสอบ",
         perf_p1:"ฟิล์มที่เกิดขึ้นมีความทนต่อการขีดข่วน และสามารถทน Humidity Test ~200 ชั่วโมง (ค่าทั่วไปขึ้นกับสภาพหน้างานและการเตรียมผิว)",
+
+            perf_h: "ปัญหาที่พบบ่อยในการใช้สารกันหมองจุ่มเย็นบนทองเหลือง",
+    perf_lead: "นี่คือปัญหาที่พบบ่อยในการใช้สารกันหมองจุ่มเย็นบนทองเหลือง พร้อมแนวทางแก้ไข",
+
+    perf_i1_t: "เกิดคราบหรือจุดด่างบนชิ้นงาน",
+    perf_i1_cause_h: "สาเหตุ: การเตรียมผิวไม่สะอาด หรือมีคราบน้ำหลงเหลืออยู่ โดยเฉพาะถ้าใช้น้ำประปาที่มีแร่ธาตุผสมอยู่",
+    perf_i1_fix_h: "แนวทางแก้ไข: ตรวจสอบขั้นตอนการล้างน้ำให้สะอาด โดยเฉพาะขั้นตอน จุ่มน้ำกลั่น (Deionized Water) ก่อนจุ่มสารกันหมอง จะช่วยป้องกันการเกิดคราบจากแร่ธาตุในน้ำได้",
+
+    perf_i2_t: "ประสิทธิภาพในการกันหมองต่ำ",
+    perf_i2_c1: "สาเหตุ:",
+    perf_i2_cause_1: "จุ่มไม่นานพอ: การจุ่มในสารละลายสั้นเกินไป ทำให้สารเคลือบไม่ทั่วถึง",
+    perf_i2_cause_2: "การทำให้แห้งไม่ดี: หากชิ้นงานไม่แห้งสนิทหลังจุ่ม จะทำให้เกิดคราบและประสิทธิภาพลดลง",
+    perf_i2_fix_h: "แนวทางแก้ไข:",
+    perf_i2_fix_1: "เพิ่มเวลาจุ่มให้อยู่ในกรอบที่แนะนำ (5–15 วินาที) หรือตามคำแนะนำของผู้ผลิต",
+    perf_i2_fix_2: "ใช้ การเป่าลม หรือ การอบอุ่น ให้ชิ้นงานแห้งสนิททันทีหลังการจุ่ม",
+
+    perf_i3_t: "ชิ้นงานมีสีเปลี่ยนไปหรือสีเพี้ยน",
+    perf_i3_cause_h: "สาเหตุ: สารกันหมองอาจทำปฏิกิริยากับผิวทองเหลืองที่เตรียมไว้ไม่ดีพอ หรือสารกันหมองมีความเข้มข้นสูงเกินไป",
+    perf_i3_fix_h: "แนวทางแก้ไข:",
+    perf_i3_fix_1: "ควรใช้สารกันหมองที่มีความเข้มข้นตามคำแนะนำของผู้ผลิตอย่างเคร่งครัด",
+    perf_i3_fix_2: "ตรวจสอบให้แน่ใจว่าผิวชิ้นงานสะอาดและเงาดีแล้วก่อนเข้าสู่กระบวนการ",
+
+    perf_i4_t: "สารละลายเสื่อมสภาพเร็ว",
+    perf_i4_cause_h: "สาเหตุ: มีสิ่งสกปรก, คราบโลหะ, หรือสารเคมีจากขั้นตอนก่อนหน้าปนเปื้อนเข้ามาในบ่อสารกันหมอง",
+    perf_i4_fix_h: "แนวทางแก้ไข:",
+    perf_i4_fix_1: "ตรวจสอบความสะอาดของชิ้นงานและระบบล้างน้ำให้ดีก่อนจุ่ม",
+    perf_i4_fix_2: "ไม่ควรนำชิ้นงานที่ยังไม่สะอาดมาจุ่มในบ่อ",
+    perf_i4_fix_3: "หากสารละลายเริ่มสกปรก ควรเปลี่ยนใหม่",
 
         footer_products:"หมวดผลิตภัณฑ์", footer_contact:"ติดต่อเรา", footer_copy:"© 2025 Baume Chemical. All rights reserved."
       },
@@ -551,23 +622,52 @@
         mk_item_1:"Anti-tarnish for Copper (concentrate)", mk_item_1_qty:"20 cc", mk_item_1_note:"Measure accurately",
         mk_item_2:"DI water", mk_item_2_qty:"Top up to 1 L", mk_item_2_note:"Stir until clear and uniform",
 
-        equip_h:"Vessels & equipment",
-        equip_1:"Tank: stainless steel, PE, or PP",
-        equip_2:"Heater (optional): glass, PTFE, stainless, ceramic, or graphite",
-        equip_3:"Drying: air blow / warm oven after dip for better water-shedding",
+    equip_h: "Vessels & Equipment",
+    equip_1: "Tank: Use chemical-resistant tanks that do not react with the solution, e.g., stainless steel, polyethylene (PE), or polypropylene (PP). A lid or fume extraction is recommended for safety and to minimize vapor dispersion.",
+    equip_2: "Heater (if warming is desired): If you need to warm the solution for performance, choose heaters that are chemically inert to the bath, such as glass, PTFE (Teflon), stainless steel, ceramic, or graphite.",
+    equip_3: "Drying: Use air-blow or warm drying immediately after dipping to minimize water spots and ensure the anti-tarnish film performs at its best.",
 
-        process_h:"Process steps",
-        proc_1:"Prep: finished Cu/Br plating or cleaned/bright-dipped parts",
-        proc_2:"Rinse with water",
-        proc_3:"Dip in DI water",
-        proc_4:"Dip in Anti-tarnish for Copper for 5–15 s",
-        proc_5:"Blow-dry or warm-dry",
+    process_h: "Process Steps",
+    proc_overview: "This process uses an anti-tarnish chemistry to form a thin protective layer on brass, reducing reactions with oxygen and airborne species that typically cause tarnish or dark stains.",
+    proc_1: "Surface preparation: Ensure the part is properly prepared—freshly copper/brass plated or thoroughly cleaned and bright-dipped. A clean, glossy surface promotes uniform anti-tarnish film formation.",
+    proc_2: "Rinse with clean water to remove any residues from plating or bright-dipping.",
+    proc_3: "DI water dip: Rinse in deionized water to reduce water marks and mineral spots, leaving the surface as clean as possible before the next step.",
+    proc_4: "Anti-tarnish dip: Immerse the part in the Anti-tarnish for Copper bath for 5–15 seconds; no heating or electricity is required.",
+    proc_5: "Drying: Remove and dry immediately using air blow or warm drying so the film sets quickly and uniformly.",
 
         tips_h:"Tips",
         tips_p1:"Important: remove all residual acidity before the anti-tarnish dip; leftover acid reduces performance.",
 
         perf_h:"Performance",
         perf_p1:"Film resists abrasion and can endure ~200 h humidity test (typical; depends on prep and conditions).",
+
+           perf_h: "Common Issues with Cold Anti-Tarnish on Brass",
+    perf_lead: "Here are the common problems when using cold-dip anti-tarnish on brass, along with corrective actions.",
+
+    perf_i1_t: "Stains or Spots on Parts",
+    perf_i1_cause_h: "Cause: Insufficient surface preparation or residual water marks, especially when using tap water containing minerals.",
+    perf_i1_fix_h: "Fix: Verify thorough rinsing—especially a DI (deionized) water dip before the anti-tarnish—to prevent mineral staining.",
+
+    perf_i2_t: "Poor Anti-Tarnish Performance",
+    perf_i2_c1: "Causes:",
+    perf_i2_cause_1: "Dip time too short: The film does not form uniformly if immersion is insufficient.",
+    perf_i2_cause_2: "Inadequate drying: If the part is not fully dried after dipping, stains may form and performance drops.",
+    perf_i2_fix_h: "Fix:",
+    perf_i2_fix_1: "Increase the dip time within the recommended window (5–15 seconds) or per supplier guidance.",
+    perf_i2_fix_2: "Dry immediately using air blow or warm drying to ensure a complete, uniform film.",
+
+    perf_i3_t: "Color Shift or Hue Deviation",
+    perf_i3_cause_h: "Cause: The anti-tarnish reacts with poorly prepared brass, or the solution concentration is too high.",
+    perf_i3_fix_h: "Fix:",
+    perf_i3_fix_1: "Keep concentration strictly within supplier recommendations.",
+    perf_i3_fix_2: "Ensure the surface is clean and bright before processing.",
+
+    perf_i4_t: "Solution Degrades Quickly",
+    perf_i4_cause_h: "Cause: Contamination by soils, metallic residues, or drag-in from previous steps.",
+    perf_i4_fix_h: "Fix:",
+    perf_i4_fix_1: "Tighten cleanliness standards and rinsing before the anti-tarnish dip.",
+    perf_i4_fix_2: "Do not introduce inadequately cleaned parts into the bath.",
+    perf_i4_fix_3: "Replace the solution when contamination is evident.",
 
         footer_products:"Products", footer_contact:"Contact Us", footer_copy:"© 2025 Baume Chemical. All rights reserved."
       }
