--- a/products/protective/tin-anti-tarnish-b100.html
+++ b/products/protective/tin-anti-tarnish-b100.html
@@ -202,7 +202,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/products/protective/anti-tarnish/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/protective/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">Tin Anti-Tarnish B100: น้ำยากันหมองดีบุก</h1>
       <p data-i18n-key="hero_tagline">ฟิล์มใสป้องกันออกซิเดชัน • คงสีเงา • 50–100 cc/L • 30–55 °C • 10 s–1 min • DI water</p>
