--- a/products/protective/anti-tarnish-bu-20.html
+++ b/products/protective/anti-tarnish-bu-20.html
@@ -202,7 +202,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/products/protective/anti-tarnish/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/protective/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">Anti-Tarnish BU-20 (Electro): น้ำยากันหมองไฟฟ้า</h1>
       <p data-i18n-key="hero_tagline">ฟิล์มใสสม่ำเสมอด้วยไฟฟ้า ไล่น้ำ แห้งเร็ว คงสีเดิม • 80–120 cc/L • 20–35 °C • 30–120 s • 0.1–0.5 A/dm² • แอโนดสแตนเลส • น้ำกลั่น</p>
